--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: markee
-description: "A new Flutter package project."
+description: "Markdown editor for Flutter"
 version: 0.0.1
 homepage:
 
